--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main id="game-grid">
+    </main>
         <section id="character-bio" class="terminal-window">
             <img src="cmu-suit.jpg" id="avatar" alt="User Avatar">
             <h2 class="bio-name">Sai J. Yalamanchili</h2>
@@ -60,3 +61,4 @@
     <script src="game-logic.js"></script>
 </body>
 </html>
+
