--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 </head>
 <body>
     <main id="game-grid">
-    </main>
         <section id="character-bio" class="terminal-window">
             <img src="cmu-suit.jpg" id="avatar" alt="User Avatar">
             <h2 class="bio-name">Sai J. Yalamanchili</h2>
-            <p class="bio-title glitch-text" data-text="Global Operative">Global Operative</p>
+            <p class="bio-title">Global Operative</p>
             <div class="bio-stats">
                 <p><strong>Status:</strong> <span id="status-text">Awaiting Directives</span></p>
-                <p><strong>Current Location:</strong> <span id="location-text">Auburn Hills, Michigan, USA</span></p>
+                <p><strong>Location:</strong> <span id="location-text">System Standby</span></p>
             </div>
             <div class="bio-contact">
                 <a href="Sai_Resume.pdf" target="_blank" class="glow-btn">Download Dossier</a>
@@ -42,13 +41,12 @@
     </main>
 
     <template id="usa-intel">
-        <div class="intel-card"><h3>OPERATION HQ: Auburn Hills, Michigan</h3><p>Current Operational Zone.</p></div>
         <div class="intel-card"><h3>TRAINING: Central Michigan University</h3><p>MS, Business Data Analytics (2022-2024)</p></div>
         <div class="intel-card"><h3>OPERATION: Cloudscale Inc.</h3><p>Cybersecurity Intern (2024)</p></div>
     </template>
     <template id="italy-intel">
         <div class="intel-card"><h3>TRAINING: Politecnico di Milano</h3><p>MS, Built Environment (2017-2019)</p></div>
-        <div class="intel-card"><h3>OPERATION: Pegaso Ingenieria</h3><p>Project Planner (Remote from Italy)</p></div>
+        <div class="intel-card"><h3>OPERATION: Pegaso Ingenieria</h3><p>Project Planner (Remote)</p></div>
     </template>
     <template id="romania-intel">
         <div class="intel-card"><h3>OPERATION: Pegaso Ingenieria</h3><p>Field assignment for the Brăila Bridge project.</p></div>
@@ -61,4 +59,3 @@
     <script src="game-logic.js"></script>
 </body>
 </html>
-
