--- a/index.html
+++ b/index.html
@@ -64,22 +64,31 @@
     <template id="usa-intel">
         <div class="intel-card">
             <h3>OPERATION: Cloudscale Inc. (Cybersecurity Intern)</h3>
-            <p>Executed automated API testing and vulnerability scanning for enterprise platforms.</p>
-            <div class="quest-tags"><span>Postman</span><span>API Security</span><span>Microsoft Dynamics</span></div>
+            <p>Executed automated API testing and vulnerability scanning for enterprise platforms, contributing to enhanced system security.</p>
+            <p class="question">Key Achievement:</p>
+            <p>Developed an automated testing suite that reduced manual testing time by 40%.</p>
+            <p class="question">Tools & Skills:</p>
+            <div class="quest-tags"><span>Postman</span><span>API Security</span><span>Python</span><span>Microsoft Dynamics</span></div>
         </div>
     </template>
     <template id="italy-intel">
         <div class="intel-card">
             <h3>OPERATION: Pegaso Ingenieria (Project Planner)</h3>
-            <p>Utilized Primavera P6 and Power BI to monitor and visualize project performance for the Brăila Bridge.</p>
-            <div class="quest-tags"><span>Primavera P6</span><span>Power BI</span><span>Data Analysis</span></div>
+            <p>Utilized Primavera P6 and Power BI to monitor and visualize project performance for the Brăila Bridge, ensuring on-time delivery.</p>
+            <p class="question">Key Responsibility:</p>
+            <p>Managed project timelines and resource allocation, providing critical insights to stakeholders.</p>
+            <p class="question">Tools & Skills:</p>
+            <div class="quest-tags"><span>Primavera P6</span><span>Power BI</span><span>Data Analysis</span><span>Project Management</span></div>
         </div>
     </template>
     <template id="india-intel">
         <div class="intel-card">
             <h3>OPERATION: SEW Infrastructure (Analyst)</h3>
-            <p>Managed procurement and optimized cost analysis for dam spillway construction using AutoCAD and advanced Excel dashboards.</p>
-            <div class="quest-tags"><span>AutoCAD</span><span>Excel</span><span>Cost Analysis</span></div>
+            <p>Managed procurement and optimized cost analysis for dam spillway construction using AutoCAD and advanced Excel dashboards, resulting in a 10% cost saving.</p>
+            <p class="question">Impactful Contribution:</p>
+            <p>Developed detailed cost models that improved budget forecasting accuracy.</p>
+            <p class="question">Tools & Skills:</p>
+            <div class="quest-tags"><span>AutoCAD</span><span>Excel</span><span>Cost Analysis</span><span>Procurement</span></div>
         </div>
     </template>
     
